@@ -10,6 +10,9 @@ and this project adheres to [Semantic Versioning](https://semver.org/lang/pt-BR/
 ### Added
 
 - **Notificações!** Adicionado o sistema de notificações. As notificações são usadas para avisar atualizações de sua conta. As notificações podem ser lidas com o comando `/notificações`. As notificacões não lidas devem sumir após 30 dias.
+- Adicionado notificações para quando um usuário compra um tema seu.
+- Adicionado notificações para quando um usuário compra algum anúncio seu na feira.
+- Adicionado notificações para quando um usuário vence uma aposta no Jogo do Bicho.
 - Peso paras plantações! Agora as plantações da `/fazendinha` usam peso por kilos, ao invés de apenas quantidade de plantas. O peso de uma plantação é semi aleatório, e varia de acordo com a estação em que a semente foi plantada.
 - O comando `/cooldowns` informa sobre notificações não lidas.
 
